// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuLink renders correctly with hidden nodes 1`] = `
<div
  data-testid="menulink"
>
  <div
    css={
      Object {
        "map": undefined,
        "name": "xmrkwo",
        "next": undefined,
        "styles": "
            
    padding: 15px 0px;
  ;
            display: flex;
            padding-left: 20px;
            padding-right: 20px;
          ",
      }
    }
  >
    <div
      className="Menu-major-item-Style"
      css={
        Object {
          "map": undefined,
          "name": "1cy5k96",
          "next": undefined,
          "styles": "
              flex-grow: 1;
              display: flex;
            ",
        }
      }
      onClick={[Function]}
    >
      basic
    </div>
    <div
      className="Menu-major-item-Style"
      css={
        Object {
          "map": undefined,
          "name": "eheuf0",
          "next": undefined,
          "styles": "
                padding: 0px 30px;
              ",
        }
      }
      data-testid="toggle-button"
      onClick={[Function]}
    >
      <span>
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-plus fa-w-14 "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`MenuLink renders correctly without hidden nodes 1`] = `
<div
  data-testid="menulink"
>
  <div
    css={
      Object {
        "map": undefined,
        "name": "xmrkwo",
        "next": undefined,
        "styles": "
            
    padding: 15px 0px;
  ;
            display: flex;
            padding-left: 20px;
            padding-right: 20px;
          ",
      }
    }
  >
    <div
      className="Menu-major-item-Style"
      css={
        Object {
          "map": undefined,
          "name": "1cy5k96",
          "next": undefined,
          "styles": "
              flex-grow: 1;
              display: flex;
            ",
        }
      }
      onClick={[Function]}
    >
      basic
    </div>
  </div>
</div>
`;
